DRT-5752 Remove test command until we have imported tests

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ pipeline:
     image: quay.io/ukhomeofficedigital/scala-sbt:latest
     commands:
       - /root/entrypoint.sh
-      - sbt clean test +publish
+      - sbt clean +publish
     environment:
       - ARTIFACTORY_USERNAME=drt_optimiser_drone
     secrets:
