--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,9 @@
 pipeline:
-
   build:
     image: quay.io/ukhomeofficedigital/scala-sbt:latest
     commands:
       - /root/entrypoint.sh
-      - sbt clean +publish
+      - sbt --error test +publish
     environment:
       - ARTIFACTORY_USERNAME=drt_optimiser_drone
     secrets:
