DRTII-635 Fix sbt build

--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,8 @@ pipeline:
     image: quay.io/ukhomeofficedigital/scala-sbt:latest
     commands:
       - /root/entrypoint.sh
-      - sbt --error test +publish
+      - sbt --error test
+      - sbt clean +publish
     environment:
       - ARTIFACTORY_USERNAME=drt_optimiser_drone
     secrets:
