--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -28,6 +28,10 @@ steps:
     commands:
       - /root/entrypoint.sh
       - sbt --error test
+    environment:
+      ARTIFACTORY_PASSWORD:
+        from_secret: ARTIFACTORY_PASSWORD
+      ARTIFACTORY_USERNAME: drt_optimiser_drone
     when:
       event:
         - push
