DRTII-910 attempt to request more drone build resources

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -14,10 +14,10 @@ steps:
     resources:
       requests:
         cpu: 500
-        memory: "500MiB"
+        memory: "1GiB"
       limits:
         cpu: 500
-        memory: "500MiB"
+        memory: "1GiB"
     commands:
       - /root/entrypoint.sh
       - sbt compile
