--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -7,6 +7,11 @@ platform:
   os: linux
   arch: amd64
 
+resources:
+  requests:
+    cpu: 2000
+    memory: 2000MiB
+
 steps:
   - name: Build
     pull: if-not-exists
@@ -14,6 +19,10 @@ steps:
     commands:
       - /root/entrypoint.sh
       - sbt compile
+    resources:
+      limits:
+        cpu: 1000
+        memory: 1000MiB
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
@@ -28,6 +37,10 @@ steps:
     commands:
       - /root/entrypoint.sh
       - sbt --error test
+    resources:
+      limits:
+        cpu: 1000
+        memory: 1000MiB
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
@@ -44,6 +57,10 @@ steps:
     commands:
       - /root/entrypoint.sh
       - sbt clean +publish
+    resources:
+      limits:
+        cpu: 1000
+        memory: 1000MiB
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
