DRTII-975 Publish & test in parallel after successful build

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -22,6 +22,22 @@ steps:
       event:
         - push
 
+  - name: Publish
+    pull: if-not-exists
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs
+    commands:
+      - /root/entrypoint.sh
+      - sbt +publish
+    environment:
+      ARTIFACTORY_PASSWORD:
+        from_secret: ARTIFACTORY_PASSWORD
+      ARTIFACTORY_USERNAME: drt_optimiser_drone
+    when:
+      event:
+        - push
+    depends_on:
+      - Build
+
   - name: Test
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs
@@ -37,21 +53,5 @@ steps:
         - push
     depends_on:
       - Build
-
-  - name: Publish
-    pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs
-    commands:
-      - /root/entrypoint.sh
-      - sbt clean +publish
-    environment:
-      ARTIFACTORY_PASSWORD:
-        from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt_optimiser_drone
-    when:
-      event:
-        - push
-    depends_on:
-      - Test
 
 ...
