DRTII-1092 Debug sbt memsettings

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -8,6 +8,16 @@ platform:
   arch: amd64
 
 steps:
+  - name: Debug
+    pull: if-not-exists
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs
+    commands:
+      - /root/entrypoint.sh
+      - sbt -v
+    when:
+      event:
+        - push
+
   - name: Build
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs
