--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -54,4 +54,21 @@ steps:
     depends_on:
       - Build
 
+  - name: slack_notification
+    pull: if-not-exists
+    image: plugins/slack
+    settings:
+      channel: devs
+      template: "*{{repo.name}}: _{{build.status}}_*\nCompleted build *{{build.number}}* after *{{since build.started}}* on *{{build.branch}}*\n{{build.link}}\n"
+    environment:
+      webhook:
+        from_secret: slack_webhook
+    when:
+      status:
+        - success
+        - failure
+      event:
+        - push
+    depends_on:
+      - Test
 ...
