--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -61,7 +61,7 @@ steps:
       channel: devs
       template: "*{{repo.name}}: _{{build.status}}_*\nCompleted build *{{build.number}}* after *{{since build.started}}* on *{{build.branch}}*\n{{build.link}}\n"
     environment:
-      webhook:
+      SLACK_WEBHOOK:
         from_secret: slack_webhook
     when:
       status:
