Remove accidental backtick

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -47,7 +47,7 @@ steps:
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt-artifactory-robot`
+      ARTIFACTORY_USERNAME: drt-artifactory-robot
     when:
       event:
         - push
