DRTII-1157 New artifactory username

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -17,7 +17,7 @@ steps:
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt-artifactory-robot
+      ARTIFACTORY_USERNAME: drt-artifactory-robot-token
     when:
       event:
         - push
@@ -31,7 +31,7 @@ steps:
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt-artifactory-robot
+      ARTIFACTORY_USERNAME: drt-artifactory-robot-token
     when:
       event:
         - push
@@ -47,7 +47,7 @@ steps:
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt-artifactory-robot
+      ARTIFACTORY_USERNAME: drt-artifactory-robot-token
     when:
       event:
         - push
