DRTII-1157 Add step to cat sbt log on failure

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -22,6 +22,15 @@ steps:
       event:
         - push
 
+  - name: Output log on failure
+    commands:
+      - cat /root/.sbt/boot/update.log
+    when:
+      status:
+        - failure
+      event:
+        - push
+
   - name: Publish
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs
