DRTII-1157 Add step to cat sbt log on failure

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -23,6 +23,7 @@ steps:
         - push
 
   - name: Output log on failure
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs
     commands:
       - cat /root/.sbt/boot/update.log
     when:
