DRTII-1157 Add step to cat sbt log on failure

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -31,6 +31,8 @@ steps:
         - failure
       event:
         - push
+    depends_on:
+      - Build
 
   - name: Publish
     pull: if-not-exists
