--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -14,6 +14,7 @@ steps:
     commands:
       - /root/entrypoint.sh
       - sbt --verbose --debug +compile
+      - cat /root/.sbt/boot/update.log
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
