DRTII-1194 Try specifying 2gb for test to prevent oom

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -45,6 +45,7 @@ steps:
       - /root/entrypoint.sh
       - sbt --error +test
     environment:
+      JAVA_OPTS: -Xmx2g
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
       ARTIFACTORY_USERNAME: drt-artifactory-robot
