DRTII-1246 Run analysis only on master commits

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -86,6 +86,7 @@ steps:
       ARTIFACTORY_USERNAME: drt-artifactory-robot
       ENV_LOG_LEVEL: ERROR
     when:
+      branch: master
       event:
         - push
 
