--- a/jvm/src/test/resources/application.conf
+++ b/jvm/src/test/resources/application.conf
@@ -14,4 +14,15 @@ akka {
       auto-start-snapshot-stores = ["inmemory-snapshot-store"]
     }
   }
+  actor {
+    allow-java-serialization = off
+    serializers {
+      protobuf = "uk.gov.homeoffice.drt.protobuf.Serializer"
+    }
+    serialization-bindings {
+      "uk.gov.homeoffice.drt.protobuf.messages.SlasUpdates.SetSlaConfigMessage" = protobuf
+      "uk.gov.homeoffice.drt.protobuf.messages.SlasUpdates.SlaConfigsMessage" = protobuf
+      "uk.gov.homeoffice.drt.protobuf.messages.config.Configs.RemoveConfigMessage" = protobuf
+    }
+  }
 }
