DRTII-1305 Use akka provided in-memory plugin for tests

--- a/jvm/src/test/resources/application.conf
+++ b/jvm/src/test/resources/application.conf
@@ -6,12 +6,10 @@ akka {
   jvm-exit-on-fatal-error = true
   persistence {
     journal {
-      plugin = "inmemory-journal"
-      auto-start-journals = ["inmemory-journal"]
+      plugin = "akka.persistence.journal.inmem"
     }
     snapshot-store {
-      plugin = "inmemory-snapshot-store"
-      auto-start-snapshot-stores = ["inmemory-snapshot-store"]
+      plugin = "akka.persistence.snapshot-store.local"
     }
   }
   actor {
