--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
+sonar.projectVersion=$DRONE_BUILD_NUMBER
 # Name of your git repo
 sonar.projectKey=drt-lib
 # Name of your git repo
@@ -8,8 +9,8 @@ sonar.projectName=drt-lib
 # Location of your src
 sonar.sources=jvm/src/main/scala,shared/src/main/scala
 # Location of your tests
-#sonar.tests=server/target/test-reports
 sonar.tests=jvm/src/test/scala,shared/src/test/scala
+sonar.scala.scalastyle.reportPaths=target/scalastyle-result.xml
+sonar.scala.scapegoat.reportPaths=target/scala-2.13/scapegoat-report/scapegoat-scalastyle.xml
 sonar.dependencyCheck.reportPath=target/scala-2.13/dependency-check-report.xml
 sonar.dependencyCheck.htmlReportPath=target/scala-2.13/dependency-check-report.html
-sonar.scala.coverage.reportPaths=jvm/target/scala-2.13/scoverage-report/scoverage.xml, js/target/scala-2.13/scoverage-report/scoverage.xml
