--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,6 +11,7 @@ sonar.sources=jvm/src/main/scala,shared/src/main/scala
 # Location of your tests
 sonar.tests=jvm/src/test/scala,shared/src/test/scala
 sonar.scala.scalastyle.reportPaths=target/scalastyle-result.xml
-sonar.scala.scapegoat.reportPaths=target/scala-2.13/scapegoat-report/scapegoat-scalastyle.xml
+sonar.scala.scapegoat.reportPaths=jvm/target/scala-2.13/scapegoat-report/scapegoat.xml
+sonar.scala.coverage.reportPaths=target/scala-2.13/scoverage-data/scoverage.coverage, js/target/scala-2.13/scoverage-data/scoverage.coverage, jvm/target/scala-2.13/scoverage-data/scoverage.coverage
 sonar.dependencyCheck.reportPath=target/scala-2.13/dependency-check-report.xml
 sonar.dependencyCheck.htmlReportPath=target/scala-2.13/dependency-check-report.html
