--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,15 +3,17 @@ sonar.projectVersion=$DRONE_BUILD_NUMBER
 sonar.projectKey=drt-lib
 # Name of your git repo
 sonar.projectName=drt-lib
-# Language
-# Deprecated: a multilanguage scan will be triggered
-#sonar.language=scala
-# Location of your src
-sonar.sources=jvm/src/main/scala,shared/src/main/scala
-# Location of your tests
-sonar.tests=jvm/src/test/scala,shared/src/test/scala
-sonar.scala.scalastyle.reportPaths=target/scalastyle-result.xml
-sonar.scala.scapegoat.reportPaths=jvm/target/scala-2.13/scapegoat-report/scapegoat.xml
-sonar.scala.coverage.reportPaths=target/scala-2.13/scoverage-data/scoverage.coverage, js/target/scala-2.13/scoverage-data/scoverage.coverage, jvm/target/scala-2.13/scoverage-data/scoverage.coverage
-sonar.dependencyCheck.reportPath=target/scala-2.13/dependency-check-report.xml
-sonar.dependencyCheck.htmlReportPath=target/scala-2.13/dependency-check-report.html
+
+sonar.modules=js,jvm
+
+js.sonar.sources=src/main/scala
+js.sonar.tests=src/test/scala
+js.sonar.scala.scapegoat.reportPaths=target/scala-2.13/scapegoat-report/scapegoat.xml
+js.sonar.dependencyCheck.htmlReportPath=target/scala-2.13/dependency-check-report.html
+js.sonar.scala.coverage.reportPaths=target/scala-2.13/scoverage-data/scoverage.coverage
+
+jvm.sonar.sources=src/main/scala
+jvm.sonar.tests=src/test/scala
+jvm.sonar.scala.scapegoat.reportPaths=target/scala-2.13/scapegoat-report/scapegoat.xml
+jvm.sonar.dependencyCheck.htmlReportPath=target/scala-2.13/dependency-check-report.html
+jvm.sonar.scala.coverage.reportPaths=target/scala-2.13/scoverage-data/scoverage.coverage
