--- a/jvm/src/test/resources/application.conf
+++ b/jvm/src/test/resources/application.conf
@@ -24,3 +24,10 @@ akka {
     }
   }
 }
+
+h2-db {
+  url = "jdbc:h2:mem:test;DATABASE_TO_UPPER=false"
+  driver = org.h2.Driver
+  connectionPool = disabled
+  keepAliveConnection = true
+}
