DRTII-1346 Run sonar scan only on master

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -141,7 +141,7 @@ steps:
       DRONE_BUILD_NUMBER: ${DRONE_BUILD_NUMBER}
     when:
       branch:
-        - ${DRONE_BRANCH}
+        - master
       event:
         - push
     depends_on:
