--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,11 +6,11 @@ sonar.projectName=drt-lib
 
 sonar.modules=js,jvm
 
+sonar.dependencyCheck.htmlReportPath=jvm/target/scala-2.13/dependency-check-report.html
+
 js.sonar.scala.scapegoat.reportPaths=target/scala-2.13/scapegoat-report/scapegoat.xml
-js.sonar.dependencyCheck.htmlReportPath=target/scala-2.13/dependency-check-report.html
 
 jvm.sonar.sources=src/main/scala
 jvm.sonar.tests=src/test/scala
 jvm.sonar.scala.scapegoat.reportPaths=target/scala-2.13/scapegoat-report/scapegoat.xml
-jvm.sonar.dependencyCheck.htmlReportPath=target/scala-2.13/dependency-check-report.html
 jvm.sonar.scala.coverage.reportPaths=target/scala-2.13/scoverage-data/scoverage.coverage
