Update artifactory username

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -17,7 +17,7 @@ steps:
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt-artifactory-robot
+      ARTIFACTORY_USERNAME: drt_ci
     when:
       event:
         - push
@@ -31,7 +31,7 @@ steps:
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt-artifactory-robot
+      ARTIFACTORY_USERNAME: drt_ci
     when:
       event:
         - push
@@ -48,7 +48,7 @@ steps:
       JAVA_OPTS: -Xmx2g
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt-artifactory-robot
+      ARTIFACTORY_USERNAME: drt_ci
     when:
       event:
         - push
@@ -83,7 +83,7 @@ steps:
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt-artifactory-robot
+      ARTIFACTORY_USERNAME: drt_ci
       ENV_LOG_LEVEL: ERROR
     when:
       event:
@@ -102,7 +102,7 @@ steps:
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt-artifactory-robot
+      ARTIFACTORY_USERNAME: drt_ci
       ENV_LOG_LEVEL: ERROR
     when:
       event:
@@ -122,7 +122,7 @@ steps:
       NVD_BASE_URL: http://nvdmirror:8008
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt-artifactory-robot
+      ARTIFACTORY_USERNAME: drt_ci
       ENV_LOG_LEVEL: ERROR
     when:
       event:
