--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -65,13 +65,9 @@ steps:
       SLACK_WEBHOOK:
         from_secret: slack_webhook
     when:
-      status:
-        - success
-        - failure
+      status: [ success, failure ]
       event:
         - push
-    depends_on:
-      - Unit tests
 
   - name: Code coverage report
     pull: if-not-exists
