DRTII-1346 Use no for inactive feature values to be filtered out later

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -57,7 +57,7 @@ steps:
 
   - name: Slack notification
     pull: if-not-exists
-    image: plugins/slack
+    image: plugins/slack@v1.4.1
     settings:
       channel: devs
       template: "*{{repo.name}}: _{{build.status}}_*\nCompleted build *{{build.number}}* after *{{since build.started}}* on *{{build.branch}}*\n{{build.link}}\n"
