--- a/jvm/src/test/resources/application.conf
+++ b/jvm/src/test/resources/application.conf
@@ -32,7 +32,7 @@ akka {
 }
 
 h2-db {
-  url = "jdbc:h2:mem:test;DATABASE_TO_UPPER=false"
+  url = "jdbc:h2:mem:test;DATABASE_TO_UPPER=false;MODE=postgreSQL;"
   driver = org.h2.Driver
   connectionPool = disabled
   keepAliveConnection = true
