--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -12,7 +12,7 @@ steps:
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-alpha
     commands:
-      - /root/entrypoint.sh
+      - /app/entrypoint.sh
       - sbt +compile
     environment:
       ARTIFACTORY_PASSWORD:
@@ -26,7 +26,7 @@ steps:
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-alpha
     commands:
-      - /root/entrypoint.sh
+      - /app/entrypoint.sh
       - sbt +publish
     environment:
       ARTIFACTORY_PASSWORD:
@@ -42,7 +42,7 @@ steps:
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-alpha
     commands:
-      - /root/entrypoint.sh
+      - /app/entrypoint.sh
       - sbt --error +test
     environment:
       JAVA_OPTS: -Xmx2g
@@ -75,7 +75,7 @@ steps:
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-alpha
     commands:
-      - /root/entrypoint.sh
+      - /app/entrypoint.sh
       - sbt -mem 4096 --error coverage test | true
       - sbt coverageReport
     environment:
@@ -95,7 +95,7 @@ steps:
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-alpha
     commands:
-      - /root/entrypoint.sh
+      - /app/entrypoint.sh
       - sbt scapegoat | true
     environment:
       ARTIFACTORY_PASSWORD:
@@ -114,7 +114,7 @@ steps:
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-alpha
     commands:
-      - /root/entrypoint.sh
+      - /app/entrypoint.sh
       - sbt -mem 4096 dependencyCheck
     environment:
       NVD_BASE_URL: http://nvdmirror:8008
