--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -13,6 +13,7 @@ steps:
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-alpha-2
     commands:
       - /app/entrypoint.sh
+      - cat /app/.sbt/repositories
       - sbt +compile
     environment:
       ARTIFACTORY_PASSWORD:
