--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -7,6 +7,9 @@ platform:
   os: linux
   arch: amd64
 
+workspace:
+  path: /app/drone/src
+
 steps:
   - name: Build library
     pull: if-not-exists
