DRTII-1692 Try publish step after unit tests

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -22,22 +22,6 @@ steps:
       event:
         - push
 
-  - name: Publish library
-    pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-alpha-10
-    commands:
-      - /root/entrypoint.sh
-      - sbt +publish
-    environment:
-      ARTIFACTORY_PASSWORD:
-        from_secret: ARTIFACTORY_PASSWORD
-      ARTIFACTORY_USERNAME: drt_ci
-    when:
-      event:
-        - push
-    depends_on:
-      - Build library
-
   - name: Unit tests
     pull: if-not-exists
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-alpha-10
@@ -54,6 +38,22 @@ steps:
         - push
     depends_on:
       - Build library
+
+  - name: Publish library
+    pull: if-not-exists
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-alpha-10
+    commands:
+      - /root/entrypoint.sh
+      - sbt +publish
+    environment:
+      ARTIFACTORY_PASSWORD:
+        from_secret: ARTIFACTORY_PASSWORD
+      ARTIFACTORY_USERNAME: drt_ci
+    when:
+      event:
+        - push
+    depends_on:
+      - Unit tests
 
   - name: Slack notification
     pull: if-not-exists
