--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -10,7 +10,7 @@ platform:
 steps:
   - name: Build library
     pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-alpha-16
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
       - sbt +compile
@@ -24,7 +24,7 @@ steps:
 
   - name: Unit tests
     pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-alpha-16
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
       - sbt --error +test
@@ -41,7 +41,7 @@ steps:
 
   - name: Publish library
     pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-alpha-16
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
       - sbt +publish
@@ -73,7 +73,7 @@ steps:
 
   - name: Code coverage report
     pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-alpha-16
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
       - sbt -mem 4096 --error coverage test | true
@@ -93,7 +93,7 @@ steps:
 
   - name: Scapegoat
     pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-alpha-16
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
       - sbt scapegoat | true
@@ -112,7 +112,7 @@ steps:
 
   - name: Dependency check
     pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-alpha-16
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
       - sbt -mem 4096 dependencyCheck
