DRTII-1721 replace akka with pekko 1.0.1

--- a/jvm/src/test/resources/application.conf
+++ b/jvm/src/test/resources/application.conf
@@ -1,6 +1,6 @@
 env = test
 
-akka {
+pekko {
   loglevel: "WARNING"
   loglevel: ${?ENV_LOG_LEVEL}
   log-dead-letters = 0,
@@ -8,10 +8,10 @@ akka {
   jvm-exit-on-fatal-error = true
   persistence {
     journal {
-      plugin = "akka.persistence.journal.inmem"
+      plugin = "pekko.persistence.journal.inmem"
     }
     snapshot-store {
-      plugin = "akka.persistence.snapshot-store.local"
+      plugin = "pekko.persistence.snapshot-store.local"
     }
   }
   actor {
