Drtii 1866 dependency check (#326)
* update .git ignore for visual code

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* using dependency check plugin net.nmoncho sbt-dependency-check

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* dependency check after unit test

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* echo key in build

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* typo in image name

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* moving nv key in buid

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* moving declara inside settings

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* update drt dependency in unit task

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* removing dependecy check from unit

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* updateing dependecy check again

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* ading sbt compile

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* update drt push

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* remove compile before dependency check

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* remove nvd api key settings

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

* keep sonar and dependency check for master

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

---------

Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -73,7 +73,7 @@ steps:
 
   - name: Code coverage report
     pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-debian12-jdk17-node20
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
       - sbt -mem 4096 --error coverage test | true
@@ -93,7 +93,7 @@ steps:
 
   - name: Scapegoat
     pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-debian12-jdk17-node20
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
       - sbt scapegoat | true
@@ -112,23 +112,24 @@ steps:
 
   - name: Dependency check
     pull: if-not-exists
-    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs::v1.4.0-debian12-jdk17-node20
+    image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
-      - sbt -mem 4096 dependencyCheck
+      - sbt -Dlog4j2.level=info dependencyCheck
     environment:
-      NVD_BASE_URL: http://nvdmirror:8008
+      JAVA_OPTS: -Xmx2g
+      NVD_API_KEY:
+        from_secret: NVD_API_KEY_SECRET
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
       ARTIFACTORY_USERNAME: drt_ci
-      ENV_LOG_LEVEL: ERROR
     when:
-      event:
-        - push
       branch:
         - master
+      event:
+        - push
     depends_on:
-      - Scapegoat
+      - Publish library
 
   - name: Sonar scanner
     pull: if-not-exists
@@ -145,9 +146,4 @@ steps:
     depends_on:
       - Dependency check
 
-services:
-  - name: NVD mirror service
-    image: sspringett/nvdmirror
-    ports:
-      - 8008
 ...
