DRTII-1893 Remove coverage for non-master

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -85,8 +85,8 @@ steps:
     when:
       event:
         - push
-#      branch:
-#        - master
+      branch:
+        - master
     depends_on:
       - Unit tests
 
