--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -76,7 +76,7 @@ steps:
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
-      - sbt -mem 4096 --error clean coverage test coverageReport
+      - sbt -mem 4096 +clean +coverage +test coverageReport
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
