DRTII-1893 Try code coverage fix

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -76,7 +76,8 @@ steps:
     image: quay.io/ukhomeofficedigital/scala-sbt-nodejs:v1.4.0-debian12-jdk17-node20
     commands:
       - /root/entrypoint.sh
-      - sbt -mem 4096 +clean +coverage +test coverageReport
+      - rm -rf target project/target */target .scoverage
+      - sbt -mem 4096 coverage test coverageReport
     environment:
       ARTIFACTORY_PASSWORD:
         from_secret: ARTIFACTORY_PASSWORD
