comment out ossIndiex for dependency check
Signed-off-by: Nilesh Gupta <guptanilesh13@gmail.com>

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -124,8 +124,8 @@ steps:
         from_secret: ARTIFACTORY_PASSWORD
       ARTIFACTORY_USERNAME: drt_ci
     when:
-      branch:
-        - master
+#      branch:
+#        - master
       event:
         - push
     depends_on:
